:v 1.0.7: fix a display bug on safari

--- a/css/cards.css
+++ b/css/cards.css
@@ -4,7 +4,7 @@
   --height:  150px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 425;
-  max-height: 200px;
+  max-height: 250px;
   text-align: left;
   position: relative;
   background-color: white;
